edited conf files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.datasource.url=${DB_URL}
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=this
 spring.datasource.password=thisthis
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -17,3 +17,4 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #spring.jpa.hibernate.show-sql=true
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 server.port=9090
+#github_token =a6551ed5372cc96b289ba581fff1d59d0820bf84
