--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=${DB_URL}
 spring.datasource.username=this
 spring.datasource.password=thisthis
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
