--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+VERSION=1.0.0.999
+
 ##spring.datasource.url=jdbc:postgresql://localhost:5432/conference_app
 ##spring.datasource.username=
 ##spring.datasource.password=
