--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,4 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 server.port=9090
 #github_token =a6551ed5372cc96b289ba581fff1d59d0820bf84
-${DATABASE_URL}
+#${DATABASE_URL}
