--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,11 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>5.4.25.Final</version>
 		</dependency>
-
+                 <dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.3.12.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
